fixed styling issues with overlap

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -144,11 +144,6 @@ h1 {
   background-color: transparent;
     }
 
-#logged-in-potties {
-  background-color: transparent;
-
-    }
-
 .card-img-top {
   border-radius: 10px;      
     }
@@ -161,6 +156,10 @@ h1 {
   font-family: 'Neucha', cursive;
   color: white;
     }
+
+#tags-link {
+  font-size: 20px;
+}    
 
 span {
   font-family: 'Neucha', cursive;
